--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "bootstrap-icons": "^1.4.1",
     "css-loader": "^5.2.0",
@@ -25,6 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "regenerator-runtime": "^0.13.7",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.1.0",
     "webpack-dev-server": "^3.11.2"
